@@ -20,6 +20,7 @@
 - improved compiling navigation in the CMS compiler
 - fixed filling of the `template` property in the CMS compiler
 - added a new method `U.aistreamer(on_line, on_message)`
+- added `Flow.edit(proxy_socket_url)` method for the remote editing of the FlowStream
 
 ========================
 0.0.15
